@@ -3,6 +3,7 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
   - Name check on alien option is always done, even if the Alien is already
     loaded (gh#21)
+  - Remove dependency on Module::Load (gh#21)
 
 0.25      2019-06-25 12:27:58 -0400
   - Add support for Alien::Base with alien option (gh#18)
